tests/errors/references/assign_to_const.duck
fn main() {
    const n = 100;
    n = 200;
}
